# final-project-GSI

tea-trackers-main/: README.md
tea-trackers-main/Sprint 1/Phase 1/: product.csv
tea-trackers-main/Sprint 1/Phase 3/: pyproject.toml
tea-trackers-main/Sprint 1/Phase 3/tea-trackers_s1p1/: package-lock.json  package.json
tea-trackers-main/Sprint 2/Stage 1/: Planif.mpp
tea-trackers-main/Sprint 2/Stage 3/: pyproject.toml
tea-trackers-main/Sprint 2/Stage 3/csv_file/: .~lock.product.csv#  modifcsv.py  product.csv
tea-trackers-main/Sprint 2/Stage 3/tea-trackers_s1p1/: .gitignore  package.json
tea-trackers-main/Sprint 2/Stage 3/tea-trackers_s1p1/src/: App.css  App.tsx  Dashboard.tsx  Favorites.tsx  FilterContext.tsx  LabNotebook.tsx  Login.tsx  Profile.css  Profile.tsx  Settings.css  Settings.tsx  jsme-react.d.ts
tea-trackers-main/Sprint 2/Stage 3/tea-trackers_s1p1/src/components/: AddPopUp.tsx  AppBarPopUp.tsx  BasePopup.tsx  CreateProd.tsx  DashboardFIltering.tsx  DeleteProd.tsx  Historique.css  HistoriquePopup.tsx  JSMEPopupScreen.tsx  Location.tsx  MapPopup.tsx  PrivateRoute.tsx  ProductCard.tsx  TakeForm.tsx  TopMenuBar.tsx
tea-trackers-main/Sprint 2/Stage 3/tea-trackers_s1p1/src/dto/: IArticle.tsx  IFilter.tsx  IMaterial.tsx
tea-trackers-main/Sprint 2/Stage 3/tea-trackers_s1p1/src/services/: ProduitService.tsx  UserService.tsx
tea-trackers-main/Sprint 2/Stage 3/tea-trackers_s1p1/src/utils/: Utils.tsx
tea-trackers-main/Sprint 2/Stage 3/tt_backend/: db_api.py  main.py  requirements.txt  test_script.py
(+27 files in other folders)
