[tool.poetry]
name = "tt_backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "readme.txt"
packages = [{include = "tt_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
SQLAlchemy = "^2.0.23"
typer = "^0.9.0"
psycopg2 = "^2.9.9"
pyodbc = "^5.0.1"
bcrypt = "^4.1.1"

[tool.poetry.scripts]
tt_backend = 'tt_backend.cli:app'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
